# B3-ml--poc

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  Makefile  README.md  pyproject.toml
docs/: architecture.md  deploy.md  payloads.md  test-plan.md
docs/modules/: analytics_mirror.md  dashboard.md  economic_models_engine.md  edge_webhooks.md  eod_pipeline.md  events_catalog.md  historical_ingestion.md  ml_baseline.md  persistence_oltp.md  portfolio_factory.md  scenario_lab.md
edge/worker/: package.json  tsconfig.json  wrangler.toml
edge/worker/src/: index.ts
examples/: economic_models_engine_job.json  economic_models_engine_usage.py
infra/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
infra/scripts/: bootstrap-local.sh  bootstrap-terraform.sh  check-prereqs.sh
infra/terraform/: README.md
sql/bigquery/analytics_mirror/: 001_external_raw_analytics.sql  002_native_curated_analytics.sql  003_example_queries.sql
sql/examples/: 001_oltp_example_inserts.sql
sql/migrations/: 001_initial_schema.sql  002_seed_portfolio_templates.sql  003_event_catalog_module.sql  004_seed_historical_events.sql  005_economic_models_engine.sql
src/b3_quant_platform/: __init__.py
src/b3_quant_platform/api/: dependencies.py  main.py
src/b3_quant_platform/core/: config.py  db.py  idempotency.py  logging.py  retry.py
src/b3_quant_platform/dashboard/: app.py
src/b3_quant_platform/economic_models_engine/: __init__.py  apt.py  arima.py  base.py  capm.py  discounted_cash_flow.py  garch.py  utils.py  valuation_by_multiples.py
src/b3_quant_platform/ingestion/: __init__.py  deduplication.py  models.py  (+5 more)
tests/: conftest.py  test_analytics_mirror.py  test_economic_models_engine.py  test_event_catalog.py  test_health.py  test_historical_ingestion.py  test_lake_and_reconciliation.py  test_persistence_integration.py  test_portfolio_factory.py  test_scenario_lab.py
(+52 files in other folders)
