[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "b3-ml-platform"
version = "0.1.0"
description = "Plataforma quantitativa multiportfólio EOD para B3"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "GitHub Copilot" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "boto3>=1.38.0,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "structlog>=25.2.0,<26.0.0",
  "orjson>=3.10.18,<4.0.0",
  "pyarrow>=19.0.1,<20.0.0",
  "pandas>=2.2.3,<3.0.0",
  "statsmodels>=0.14.4,<1.0.0",
  "arch>=7.2.0,<8.0.0",
  "redis>=5.2.1,<6.0.0",
  "streamlit>=1.44.0,<2.0.0",
  "tensorflow>=2.18.0,<3.0.0",
  "google-cloud-storage>=3.1.0,<4.0.0",
  "google-cloud-bigquery>=3.31.0,<4.0.0",
  "click>=8.1.8,<9.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "pytest-cov>=6.1.1,<7.0.0",
  "respx>=0.22.0,<1.0.0",
  "ruff>=0.11.4,<1.0.0",
  "mypy>=1.15.0,<2.0.0"
]

[project.scripts]
b3-api = "b3_quant_platform.api.main:run"
b3-jobs = "b3_quant_platform.jobs.cli:cli"
b3-dashboard = "b3_quant_platform.dashboard.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/b3_quant_platform"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["src"]
